--- a/about.html
+++ b/about.html
@@ -288,7 +288,7 @@
         <a class="ho hoo1" href="https://aronjohn1.github.io/burlat-folder/HOMEPAGE.HTML"></a>
         <a  class="ho hoo2" href="https://aronjohn1.github.io/ANOTHERPROJECT/HOMEPAGE.HTML"></a>
 
-        <a  class="ho hoo3" href="https://aronjohn1.github.io/Table/family.html"></a>
+        <a  class="ho hoo3" href="https://aronjohn1.github.io/table_info/table.html"></a>
      </div>
 
      
